--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <h4 style="color: #1976d2; margin: 0 0 10px 0;">🌐 Image Processing Demo</h4>
                     <p style="margin: 0; font-size: 14px; color: #0d47a1;">
                         This app tries backend processing first, then falls back to JavaScript processing if backend is unavailable.
-                        <br><strong>All 4 filters available:</strong> Grayscale, Blur, Sharpen, Edge Detection
+                        <br><strong>All 7 filters available:</strong> Grayscale, Sepia, Brightness, Contrast, Blur, Sharpen, Edge Detection
                         <br><strong>Backend:</strong> <span id="backend-status">Checking...</span>
                     </p>
                 </div>
@@ -82,6 +82,6 @@
         </main>
     </div>
 
-    <script src="script-simplified.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
