--- a/demo.html
+++ b/demo.html
@@ -41,7 +41,15 @@
     </style>
 </head>
 <body>
-    <h1>🎨 Image Processing Demo</h1>
+    <h1>🎨 Image Processing Demo - Simplified</h1>
+
+    <div style="background: #fff3cd; border: 2px solid #ffc107; border-radius: 8px; padding: 15px; margin: 15px 0; color: #856404;">
+        <h4 style="margin: 0 0 10px 0;">⚠️ Simplified Mode</h4>
+        <p style="margin: 0; font-size: 14px;">
+            This demo features 4 reliable filters: <strong>Grayscale, Blur, Sharpen, Edge Detection</strong>.
+            <br>Problematic filters (Sepia, Brightness, Contrast) have been removed.
+        </p>
+    </div>
     
     <div class="demo-section">
         <h2>📊 System Status</h2>
@@ -61,9 +69,9 @@
                 <p>Click to process with different filters</p>
                 <select id="demo-filter">
                     <option value="grayscale">Grayscale</option>
-                    <option value="sepia">Sepia</option>
-                    <option value="brightness">Brightness</option>
-                    <option value="contrast">Contrast</option>
+                    <option value="blur">Blur</option>
+                    <option value="sharpen">Sharpen</option>
+                    <option value="edge">Edge Detection</option>
                 </select>
                 <button onclick="processDemoImage()">Process</button>
             </div>
@@ -124,35 +132,85 @@
             switch(filter) {
                 case 'grayscale':
                     for (let i = 0; i < data.length; i += 4) {
-                        const gray = data[i] * 0.299 + data[i + 1] * 0.587 + data[i + 2] * 0.114;
+                        const gray = Math.round(data[i] * 0.299 + data[i + 1] * 0.587 + data[i + 2] * 0.114);
                         data[i] = gray;
                         data[i + 1] = gray;
                         data[i + 2] = gray;
                     }
                     break;
-                case 'sepia':
-                    for (let i = 0; i < data.length; i += 4) {
-                        const r = data[i];
-                        const g = data[i + 1];
-                        const b = data[i + 2];
-                        data[i] = Math.min(255, (r * 0.393) + (g * 0.769) + (b * 0.189));
-                        data[i + 1] = Math.min(255, (r * 0.349) + (g * 0.686) + (b * 0.168));
-                        data[i + 2] = Math.min(255, (r * 0.272) + (g * 0.534) + (b * 0.131));
+                case 'blur':
+                    // Simple blur effect
+                    const originalData = new Uint8ClampedArray(data);
+                    const blurRadius = 1;
+
+                    for (let y = 0; y < 200; y++) {
+                        for (let x = 0; x < 200; x++) {
+                            let r = 0, g = 0, b = 0, count = 0;
+
+                            for (let dy = -blurRadius; dy <= blurRadius; dy++) {
+                                for (let dx = -blurRadius; dx <= blurRadius; dx++) {
+                                    const nx = x + dx;
+                                    const ny = y + dy;
+
+                                    if (nx >= 0 && nx < 200 && ny >= 0 && ny < 200) {
+                                        const idx = (ny * 200 + nx) * 4;
+                                        r += originalData[idx];
+                                        g += originalData[idx + 1];
+                                        b += originalData[idx + 2];
+                                        count++;
+                                    }
+                                }
+                            }
+
+                            const idx = (y * 200 + x) * 4;
+                            data[idx] = Math.round(r / count);
+                            data[idx + 1] = Math.round(g / count);
+                            data[idx + 2] = Math.round(b / count);
+                        }
                     }
                     break;
-                case 'brightness':
-                    for (let i = 0; i < data.length; i += 4) {
-                        data[i] = Math.min(255, data[i] * 1.3);
-                        data[i + 1] = Math.min(255, data[i + 1] * 1.3);
-                        data[i + 2] = Math.min(255, data[i + 2] * 1.3);
+                case 'sharpen':
+                    // Simple sharpen effect
+                    const sharpenData = new Uint8ClampedArray(data);
+                    for (let y = 1; y < 199; y++) {
+                        for (let x = 1; x < 199; x++) {
+                            const idx = (y * 200 + x) * 4;
+
+                            for (let c = 0; c < 3; c++) {
+                                const center = sharpenData[idx + c];
+                                const top = sharpenData[((y-1) * 200 + x) * 4 + c];
+                                const bottom = sharpenData[((y+1) * 200 + x) * 4 + c];
+                                const left = sharpenData[(y * 200 + (x-1)) * 4 + c];
+                                const right = sharpenData[(y * 200 + (x+1)) * 4 + c];
+
+                                const sharpened = center * 5 - top - bottom - left - right;
+                                data[idx + c] = Math.min(255, Math.max(0, sharpened));
+                            }
+                        }
                     }
                     break;
-                case 'contrast':
-                    const factor = 1.5;
-                    for (let i = 0; i < data.length; i += 4) {
-                        data[i] = Math.min(255, Math.max(0, factor * (data[i] - 128) + 128));
-                        data[i + 1] = Math.min(255, Math.max(0, factor * (data[i + 1] - 128) + 128));
-                        data[i + 2] = Math.min(255, Math.max(0, factor * (data[i + 2] - 128) + 128));
+                case 'edge':
+                    // Simple edge detection
+                    const edgeData = new Uint8ClampedArray(data);
+                    for (let y = 1; y < 199; y++) {
+                        for (let x = 1; x < 199; x++) {
+                            const idx = (y * 200 + x) * 4;
+
+                            for (let c = 0; c < 3; c++) {
+                                const center = edgeData[idx + c];
+                                const top = edgeData[((y-1) * 200 + x) * 4 + c];
+                                const bottom = edgeData[((y+1) * 200 + x) * 4 + c];
+                                const left = edgeData[(y * 200 + (x-1)) * 4 + c];
+                                const right = edgeData[(y * 200 + (x+1)) * 4 + c];
+
+                                const edge = Math.abs(center * 8 - top - bottom - left - right -
+                                                    edgeData[((y-1) * 200 + (x-1)) * 4 + c] -
+                                                    edgeData[((y-1) * 200 + (x+1)) * 4 + c] -
+                                                    edgeData[((y+1) * 200 + (x-1)) * 4 + c] -
+                                                    edgeData[((y+1) * 200 + (x+1)) * 4 + c]);
+                                data[idx + c] = Math.min(255, edge);
+                            }
+                        }
                     }
                     break;
             }
