--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,18 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Processing App</title>
+    <title>Image Processing & Face Recognition App</title>
     <link rel="stylesheet" href="styles.css">
+
+    <!-- Firebase SDK -->
+    <script type="module">
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-app.js";
+      import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-analytics.js";
+      import { getFirestore } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-firestore.js";
+      import { getStorage } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-storage.js";
+
+      const firebaseConfig = {
+        apiKey: "AIzaSyDXA2KVIekdDs6bZG2k45v26WeRt2V3Gu8",
+        authDomain: "task-250703.firebaseapp.com",
+        projectId: "task-250703",
+        storageBucket: "task-250703.firebasestorage.app",
+        messagingSenderId: "514137378781",
+        appId: "1:514137378781:web:90d309959a2c3cb4817034",
+        measurementId: "G-J8254T9T31"
+      };
+
+      const app = initializeApp(firebaseConfig);
+      const analytics = getAnalytics(app);
+      const db = getFirestore(app);
+      const storage = getStorage(app);
+
+      // Make Firebase available globally
+      window.firebaseApp = app;
+      window.firebaseDb = db;
+      window.firebaseStorage = storage;
+      window.firebaseAnalytics = analytics;
+    </script>
 </head>
 <body>
     <div class="container">
         <header>
             <h1>Image Processing Lab</h1>
-            <p>Upload an image and apply processing filters</p>
+            <p>Upload images, apply filters, and detect faces</p>
         </header>
 
+        <!-- Navigation -->
+        <nav class="navbar">
+            <button id="imageProcessingTab" class="nav-btn active">📷 Image Processing</button>
+            <button id="faceRecognitionTab" class="nav-btn">👤 Face Recognition</button>
+        </nav>
+
         <main>
-            <div class="upload-section">
+            <!-- Image Processing Section -->
+            <div id="imageProcessingSection" class="tab-content active">
                 <div class="permission-notice" id="permissionNotice" style="display: none;">
                     <div style="background: #fff3cd; border: 2px solid #FF6600; border-radius: 8px; padding: 15px; margin-bottom: 15px;">
                         <h4 style="color: #FF6600; margin: 0 0 10px 0;">📱 Android Device Detected</h4>
@@ -35,7 +71,7 @@
                         <input type="file" id="imageInput" accept="image/*" hidden>
                     </div>
                 </div>
-                
+
                 <div class="controls">
                     <label for="processType">Filter Type:</label>
                     <select id="processType">
@@ -48,23 +84,63 @@
                 </div>
             </div>
 
+            <!-- Face Recognition Section -->
+            <div id="faceRecognitionSection" class="tab-content">
+                <div class="permission-notice" id="cameraPermissionNotice" style="display: none;">
+                    <div style="background: #fff3cd; border: 2px solid #FF6600; border-radius: 8px; padding: 15px; margin-bottom: 15px;">
+                        <h4 style="color: #FF6600; margin: 0 0 10px 0;">📱 Camera Permission Required</h4>
+                        <p style="margin: 0; font-size: 14px; color: #856404;">
+                            This app requires camera permission for real-time face detection.
+                            Please allow camera access when prompted.
+                        </p>
+                    </div>
+                </div>
+
+                <div class="camera-container">
+                    <video id="video" autoplay muted playsinline style="display: none;"></video>
+                    <canvas id="canvas" style="display: none;"></canvas>
+                    <canvas id="overlayCanvas" style="display: none; position: absolute; top: 0; left: 0;"></canvas>
+                    <div id="cameraPlaceholder" class="camera-placeholder">
+                        <div class="camera-icon">📷</div>
+                        <p>Click "Start Real-time Detection" to begin</p>
+                    </div>
+                </div>
+
+                <div class="controls">
+                    <button id="startCameraBtn">Start Real-time Detection</button>
+                    <button id="stopCameraBtn" disabled style="display: none;">Stop Detection</button>
+                    <button id="registerBtn" disabled>Register Current Face</button>
+                </div>
+
+                <!-- Attendance Section -->
+                <div class="attendance-section" style="margin-top: 30px;">
+                    <h3>📋 Attendance Log</h3>
+                    <div id="attendanceList" class="attendance-list">
+                        <p>No attendance records yet</p>
+                    </div>
+                    <button id="clearAttendanceBtn" style="margin-top: 10px;">Clear Attendance</button>
+                </div>
+            </div>
+
             <div class="results-section" id="resultsSection" style="display: none;">
                 <div class="image-comparison">
                     <div class="image-container">
-                        <h3>Original Image</h3>
-                        <img id="originalImage" alt="Original">
+                        <h3 id="originalImageTitle">Original Image</h3>
+                        <img id="originalImage" alt="Original" style="display: none;">
+                        <img id="capturedImage" alt="Captured" style="display: none;">
                     </div>
                     <div class="image-container">
-                        <h3>Processed Image</h3>
-                        <img id="processedImage" alt="Processed">
-                        <button id="downloadBtn">Download</button>
+                        <h3 id="processedImageTitle">Processed Image</h3>
+                        <img id="processedImage" alt="Processed" style="display: none;">
+                        <div id="faceInfo" class="face-info" style="display: none;"></div>
+                        <button id="downloadBtn" style="display: none;">Download</button>
                     </div>
                 </div>
             </div>
 
             <div class="loading" id="loading" style="display: none;">
                 <div class="spinner"></div>
-                <p>Processing image...</p>
+                <p id="loadingText">Loading face detection models...</p>
             </div>
         </main>
     </div>
