Deploy: Image Processing & Face Recognition App with cache-busting
- Added cache-busting version parameters to CSS and JS
- Added cache control meta tags to prevent browser caching
- Fixed tab switching and navigation issues
- Complete frontend with Image Processing and Face Recognition
- Backend API integration with error handling
- Ready for GitHub Pages deployment

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Processing & Face Recognition App</title>
-    <link rel="stylesheet" href="styles.css">
+
+    <!-- Cache Control Meta Tags -->
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
+    <meta name="version" content="20250704-2">
+    <link rel="stylesheet" href="styles.css?v=20250704-2">
 
     <!-- Firebase SDK -->
     <script type="module">
@@ -176,6 +182,6 @@
     </script>
 
     <!-- Main script -->
-    <script src="script.js" onerror="console.error('Failed to load script.js')"></script>
+    <script src="script.js?v=20250704-2" onerror="console.error('Failed to load script.js')"></script>
 </body>
 </html>
